--- a/task2/index.html
+++ b/task2/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <script
       src="https://kit.fontawesome.com/bfa60e7860.js"
       crossorigin="anonymous"
@@ -379,6 +379,6 @@
       </div>
     </div>
 
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
